--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   android:layout_height="wrap_content">
 
+    <ImageView
+            android:layout_width="160dp"
+            android:layout_height="90dp"
+            tools:srcCompat="@tools:sample/backgrounds/scenic"
+            android:id="@+id/ivArticleImage"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:scaleType="centerCrop"/>
+
+    <TextView
+            android:text="@string/source"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sourceTextView"
+            app:layout_constraintTop_toBottomOf="@+id/ivArticleImage"
+            app:layout_constraintStart_toStartOf="@+id/ivArticleImage"
+            android:layout_marginTop="16dp"/>
+
+    <TextView
+            android:text="@string/PublisthedAt"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/publishedAtTextView"
+            app:layout_constraintTop_toBottomOf="@+id/sourceTextView"
+            app:layout_constraintStart_toStartOf="@+id/ivArticleImage"/>
+
+    <TextView
+            android:text="@string/Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/titleTextView"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
+            app:layout_constraintTop_toTopOf="@+id/ivArticleImage"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+            android:text="@string/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/descriptionTextView"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:textStyle="italic"
+            app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
+            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
